--- a/reddog/config/reddog_him.yaml
+++ b/reddog/config/reddog_him.yaml
@@ -1,6 +1,5 @@
 # 
-# policy_path:  "pre_train/isaacgym/exported/policies/policy_1.pt"
-policy_path: "/home/csl/mujoco_rl/crazydog_mujoco/reddog/pre_train/isaacgym/exported/policies/v1/policy_1.pt"
+policy_path: "/home/csl/test/legged_rl_ws/src/legged_rl/legged_gym/logs/rough_Reddog/exported/policies/policy_1.pt"
 xml_path: "scene.xml"
 
 # Total simulation time
@@ -22,6 +21,8 @@ dof_vel_scale: 0.05
 action_scale: 0.25
 cmd_scale: [2.0, 2.0, 0.25]
 num_actions: 12
-num_obs: 48
+num_obs: 270
+one_step_obs_size: 45
+obs_buffer_size: 6
 
-cmd_init: [0.5, 0, 0.0]
+cmd_init: [0, 0.0, 0.0]
