--- a/reddog/config/reddog_him.yaml
+++ b/reddog/config/reddog_him.yaml
@@ -1,7 +1,7 @@
 # 
 # policy_path: "/home/csl/test/legged_rl_ws/src/legged_rl/legged_gym/logs/rough_Reddog/exported/policies/policy_1.pt"
-policy_path: "pre_train/him/KP10/policy_1.pt"
-xml_path: "scene_terrain_1.xml"
+policy_path: "pre_train/him/KP10/v2/policy_1.pt"
+xml_path: "scene.xml"
 
 # Total simulation time
 simulation_duration: 60.0
@@ -13,6 +13,7 @@ control_decimation: 4
 # kps: [3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
 # kds: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
 kps: [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]
+# kps: [8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8]
 kds: [0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4]
 
 
@@ -29,4 +30,4 @@ num_obs: 270
 one_step_obs_size: 45
 obs_buffer_size: 6
 
-cmd_init: [0.0, 0.0, 0.0]
+cmd_init: [-0.5, 0.0, 0.0]
