--- a/reddog/config/reddog_lab.yaml
+++ b/reddog/config/reddog_lab.yaml
@@ -1,5 +1,5 @@
 # 
-policy_path:  "pre_train/isaaclab/2025-03-24_20-26-04/exported/policy.pt"
+policy_path:  "pre_train/isaaclab/reddog/2025-05-03_04-26-29/exported/policy.pt"
 xml_path: "scene_lab.xml"
 
 # Total simulation time
@@ -18,8 +18,8 @@ kds: [0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4]
 kps: [15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15]
 # kds: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
 
-default_angles: [0.1, -0.1, 0.1, -0.1, 0.785, 0.785, -0.785, -0.785, -1.57, -1.57, 1.57, 1.57]
-# initial_pos: [-0.3, 0.3, -0.3, 0.3, 0.785, 0.785, -0.785, -0.785, -1.57, -1.57, 1.57, 1.57]
+default_angles: [0.0, 0.0, 0.0, 0.0, 0.785, 0.785, -0.785, -0.785, -1.57, -1.57, 1.57, 1.57]
+initial_pos: [0.0, 0.0, 0.0, 0.0, 0.785, 0.785, -0.785, -0.785, -1.57, -1.57, 1.57, 1.57]
 
 
 lin_vel_scale: 1.0
@@ -29,9 +29,10 @@ dof_vel_scale: 1.0
 action_scale: 0.2
 cmd_scale: [1.0, 1.0, 1.0]
 num_actions: 12
-num_obs: 48
+num_obs: 49
 
-animation: False  # change num_obs to 49 if True
-max_step: 83
+animation: True  # change num_obs to 49 if True
+max_step: 205
+loop_start: 113
 
-cmd_init: [0.0, 0.0, 0.5]
+cmd_init: [0.0, 0.0, -1.0]
